--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Major+Mono+Display&family=Oooh+Baby&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Qwitcher+Grypen:wght@400;700&family=Rubik+Glitch&family=Trade+Winds&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Major+Mono+Display&family=Oooh+Baby&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Qwitcher+Grypen:wght@400;700&family=Rubik+Glitch&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -13,48 +19,49 @@
         <section class="section" id="headerSection1">
             <div class="contanier">
                 <div class="row">
-                    <div class="col-lg-8">
-                        <a class="btn btn-primary"
+                    <div class="col-lg-8 d-block d-md-none">
+                        <!-- <a class="btn"
                         data-bs-toggle="offcanvas" 
                         href="#offCanvas" 
                         role="button" 
-                        aria-controls="offCanvas"></a>
-                        <div class="offcanvas offcanvas-start"
-                        tabindex="-1"
-                        id="offCanvas"
-                        aria-labelledby="offcanvasLabel">
+                        aria-controls="offCanvas">Click</a>
+                        <div 
+                            class="offcanvas offcanvas-start"
+                            tabindex="-1"
+                            id="offCanvas"
+                            aria-labelledby="offcanvasLabel">
                             <div class="offcanvas-header">
-                            <button 
-                            type="button"
-                            class="btn-close"
-                            data-bs-dismiss="offcanvas"
-                            aria-label="Close">
-                        </button>
-                        <ul class="offcanvas-menu">
-                            <li>
-                                <a href="index.html" class="offcanvas-item">Home</a>
-                            </li>
-                            <li>
-                                <a href="about.html" class="offcanvas-item">About</a>
-                            </li>
-                            <li>
-                                <a href="myproject.html" class="offcanvas-item">Project</a>
-                            </li>
-                            <li>
-                                <a href="#" class="offcanvas-item">Sports</a>
-                            </li>
-                            <li>
-                                <a href="#" class="offcanvas-item">Gaming</a>
-                            </li>
-                            <li>
-                                <a href="#" class="offcanvas-item">Reading</a>
-                            </li>
-                            <li>
-                                <a href="#" class="offcanvas-item">TvShows</a>
-                            </li>
-                        </ul>
-                    </div>
-                        <!-- <div class="drop-down-div d-lg-none">
+                                <button 
+                                    type="button"
+                                    class="btn-close"
+                                    data-bs-dismiss="offcanvas"
+                                    aria-label="Close">
+                                </button>
+                                <ul class="offcanvas-menu list-unstyled">
+                                    <li>
+                                        <a href="index.html" class="offcanvas-item">Home</a>
+                                    </li>
+                                    <li>
+                                        <a href="about.html" class="offcanvas-item">About</a>
+                                    </li>
+                                    <li>
+                                        <a href="myproject.html" class="offcanvas-item">Project</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="offcanvas-item">Sports</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="offcanvas-item">Gaming</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="offcanvas-item">Reading</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="offcanvas-item">TvShows</a>
+                                    </li>
+                                </ul>
+                            </div> -->
+                            <div class="drop-down-div d-lg-none">
                             <div class="dropdown text-end text-sm-end mt-5">
                                 <button class="btn dropdown-btn dropdowntoggle btn-outline-danger"
                                 type="button" 
@@ -85,7 +92,7 @@
                                         <a href="#" class="dropdown-item">TvShows</a>
                                     </li>
                                 </ul>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -95,16 +102,16 @@
             <div class="contanier mb-5">
                 <div class="row">
                     <div class="col-lg-4">
-                        <h1 class="heading">ClintPage</h1>
+                        <h1 class="heading">CjPage</h1>
                     </div>
                         <nav class="nav d-none d-lg-flex main-nav justify-content-lg-center" id="mainNav">
-                            <a href="index.html" class="header-link nav-link text-uppercase">Home</a>
-                            <a href="about.html" class="header-link nav-link text-uppercase">About</a>
-                            <a href="myproject.html" class="header-link nav-link text-uppercase">project</a>
-                            <a href="sports.html" class="header-link nav-link text-uppercase">sports</a>
-                            <a href="gaming.html" class="header-link nav-link text-uppercase">Gaming</a>
-                            <a href="reading.html" class="header-link nav-link text-uppercase">Reading</a>
-                            <a href="tvshows.html" class="header-link nav-link text-uppercase">Tvshow</a>
+                            <a href="index.html" class="header-text header-link nav-link text-uppercase">Home</a>
+                            <a href="about.html" class="header-text header-link nav-link text-uppercase">About</a>
+                            <a href="myproject.html" class="header-text header-link nav-link text-uppercase">project</a>
+                            <a href="sports.html" class="header-text header-link nav-link text-uppercase">sports</a>
+                            <a href="gaming.html" class="header-text header-link nav-link text-uppercase">Gaming</a>
+                            <a href="reading.html" class="header-text header-link nav-link text-uppercase">Reading</a>
+                            <!-- <a href="tvshows.html" class="header-link nav-link text-uppercase">Tvshow</a> -->
                         </nav>
                     </div>
                 </div>
@@ -121,15 +128,15 @@
                         <i class="bi bi-facebook"></i>
                         <span class="visually-hidden">facebook</span>
                     </a>
-                    <a href="#" class="nav-link social-link">
+                    <a href="https://x.com/clint3549283526" class="nav-link social-link">
                         <i class="bi bi-twitter"></i>
                         <span class="visually-hidden">twitter</span>
                     </a>
-                    <a href="#" class="nav-link social-link">
+                    <a href="https://github.com/clint601" class="nav-link social-link">
                         <i class="bi bi-github"></i>
                         <span class="visually-hidden">github</span>
                     </a>
-                    <a href="#" class="nav-link social-link">
+                    <a href="https://www.linkedin.com/in/clint-jackson-61a817331/" class="nav-link social-link">
                         <i class="bi bi-linkedin"></i>
                         <span class="visually-hidden">linkedin</span>
                     </a>
@@ -153,30 +160,30 @@
         <section class="section" id="Section2">
             <div class="container mb-5">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <h2>
                             <a href="sports.html"class=" social-link nav-link text-center fw-bold">Sports</a>
                         </h2>
-                        <img src="images/dave-adamson--nATH0CrkMU-unsplash.jpg"alt=" a football laying on green football field" class="img-fluid image rounded mx-auto mb-3 w-100" />
+                        <img src="images/dave-adamson--nATH0CrkMU-unsplash.jpg"alt=" a football laying on green football field" class=" box-img img-fluid image rounded mx-auto mb-3 w-100" />
                     </div>
-                            <div class="col-md-3">
+                            <div class="col-md-4">
                                 <h2>
                                     <a href="gaming.html"class=" social-link nav-link text-center fw-bold">Gaming</a>
                                 </h2>
-                                <img src="images/fabio-magalhaes-nmTm7knUnqs-unsplash.jpg"alt=" a gaming monitor in a dark room with purple led lights" class="img-fluid image rounded mx-auto mb-3 w-100" />
+                                <img src="images/fabio-magalhaes-nmTm7knUnqs-unsplash.jpg"alt=" a gaming monitor in a dark room with purple led lights" class=" box-img img-fluid image rounded mx-auto mb-3 w-100" />
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-4">
                                 <h2>
                                     <a href="reading.html"class=" social-link nav-link text-center fw-bold">Reading</a>
                                 </h2>
-                                    <img src="images/miika-laaksonen-nUL9aPgGvgM-unsplash.jpg"alt=" an manga book with black and white writing and drawing" class="img-fluid image rounded mx-auto mb-3 w-100" />
+                                    <img src="images/miika-laaksonen-nUL9aPgGvgM-unsplash.jpg"alt=" an manga book with black and white writing and drawing" class=" box-img img-fluid image rounded mx-auto mb-3 w-100" />
                             </div>
-                            <div class="col-md-3">
+                            <!-- <div class="col-md-3">
                                 <h2>
                                     <a href="tvshows.html"class=" social-link nav-link text-center fw-bold">Tvshows</a>
                                 </h2>
                                     <img src="images/oscar-nord-Sd87V72cJEU-unsplash.jpg"alt="an tv place on a white background" class="img-fluid image rounded mx-auto mb-3 w-100" />
-                            </div>
+                            </div> -->
                         </ul>
                     </div>
             </div>
@@ -187,13 +194,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <h2 class="footerheading">contacts</h2>
+                        <h2 class="footer-heading text-light">contacts</h2>
                     <ul class=" myContacts list-unstyled">
                         <li>
-                            <a href="tel:6019187211">Call me <span class="icon"><i class="bi bi-emoji-kiss"></i></span></a>
+                            <a href="tel:6019187211" class="footer-link text-light">Call me <span class="icon"><i class="bi bi-emoji-kiss"></i></span></a>
                         </li>
                         <li>
-                            <a href="mailto:clintjackson601@gmail.com">Email: clintjackson601@gmail.com</a>
+                            <a href="mailto:clintjackson601@gmail.com"class="footer-link text-light">Email: clintjackson601@gmail.com</a>
                         </li>
                     </ul>
                     </div>
