--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                             </li>
                         </ul>
                     </div> -->
-                        <div class="drop-down-div d-lg-none">
+                        <!-- <div class="drop-down-div d-lg-none">
                             <div class="dropdown text-end text-sm-end mt-5">
                                 <button class="btn dropdown-btn dropdowntoggle btn-outline-danger"
                                 type="button" 
@@ -87,12 +87,24 @@
                                     <li>
                                         <a href="reading.html" class="dropdown-item">Reading</a>
                                     </li>
-                                    <!-- <li>
+                                    <li>
                                         <a href="#" class="dropdown-item">TvShows</a>
-                                    </li> -->
+                                    </li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
+                        <button class="hamburger">
+                            <div class="bar"></div>
+                        </button>
+                    </div>
+                    <nav class="mobile-nav">
+                        <a href="index.html">Home</a>
+                        <a href="about.html">About</a>
+                        <a href="myproject.html">Project</a>
+                        <a href="sports.html">Sports</a>
+                        <a href="gaming.html">Gaming</a>
+                        <a href="reading.html">Reading</a>
+                    </nav>
                     </div>
                 </div>
             </div>
@@ -101,7 +113,7 @@
             <div class="contanier mb-5">
                 <div class="row">
                     <div class="col-lg-4">
-                        <h1 class="heading">CjPage</h1>
+                        <a href="index.html" class="heading">CJpage</a>
                     </div>
                         <nav class="nav d-none d-lg-flex main-nav justify-content-lg-center" id="mainNav">
                             <a href="index.html" class="header-text header-link nav-link text-uppercase">Home</a>
@@ -147,6 +159,7 @@
         <section class="section" id="Section1">
             <div class="container mb-5">
                 <div class="row">
+                    <h2 class=" ab-text main-heading text-center">About Me</h2>
                     <div class="col-md-5">
                         <img src="images/IMG_2689.jpg"alt="placeholder img" class="img-fluid image w-100" />
                     </div>
@@ -177,5 +190,6 @@
         </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
