--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="header">
         <section class="section" id="headerSection1">
-            <div class="contanier">
+            <div class="container">
                 <div class="row">
                     <div class="col-lg-8 d-block d-md-none">
                         <!-- <a class="btn"
@@ -62,13 +62,13 @@
                                 </ul>
                             </div> -->
                             <div class="drop-down-div d-lg-none">
-                            <div class="dropdown text-end text-sm-end mt-5">
+                            <!-- <div class="dropdown text-end text-sm-end mt-5">
                                 <button class="btn dropdown-btn dropdowntoggle btn-outline-danger"
                                 type="button" 
                                 role="button"
                                 data-bs-toggle="dropdown" 
                                 aria-expanded="false"
-                                >tap</button>
+                                ></button>
                                 <ul class="dropdown-menu ">
                                     <li>
                                         <a href="index.html" class="dropdown-item">Home</a>
@@ -92,33 +92,44 @@
                                         <a href="#" class="dropdown-item">TvShows</a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div> -->
+                            <button class="hamburger">
+                                <div class="bar"></div>
+                            </button>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="section" id="headerSection2">
-            <div class="contanier mb-5">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <h1 class="heading">CjPage</h1>
-                    </div>
-                        <nav class="nav d-none d-lg-flex main-nav justify-content-lg-center" id="mainNav">
-                            <a href="index.html" class="header-text header-link nav-link text-uppercase">Home</a>
-                            <a href="about.html" class="header-text header-link nav-link text-uppercase">About</a>
-                            <a href="myproject.html" class="header-text header-link nav-link text-uppercase">project</a>
-                            <a href="sports.html" class="header-text header-link nav-link text-uppercase">sports</a>
-                            <a href="gaming.html" class="header-text header-link nav-link text-uppercase">Gaming</a>
-                            <a href="reading.html" class="header-text header-link nav-link text-uppercase">Reading</a>
-                            <!-- <a href="tvshows.html" class="header-link nav-link text-uppercase">Tvshow</a> -->
+                        <nav class="mobile-nav">
+                            <a href="index.html">Home</a>
+                            <a href="about.html">About</a>
+                            <a href="myproject.html">Project</a>
+                            <a href="sports.html">Sports</a>
+                            <a href="gaming.html">Gaming</a>
+                            <a href="reading.html">Reading</a>
                         </nav>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="section" id="headerSection3">
-            <div class="container">
+        <section class="section" id="headerSection2">
+            <div class="container mb-5">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <a href="index.html" class="heading">CJpage</a>
+                    </div>
+                    <nav class="nav d-none d-lg-flex main-nav justify-content-lg-center" id="mainNav">
+                        <a href="index.html" class="header-text header-link nav-link text-uppercase">Home</a>
+                        <a href="about.html" class="header-text header-link nav-link text-uppercase">About</a>
+                        <a href="myproject.html" class="header-text header-link nav-link text-uppercase">project</a>
+                        <a href="sports.html" class="header-text header-link nav-link text-uppercase">sports</a>
+                        <a href="gaming.html" class="header-text header-link nav-link text-uppercase">Gaming</a>
+                        <a href="reading.html" class="header-text header-link nav-link text-uppercase">Reading</a>
+                        <!-- <a href="tvshows.html" class="header-link nav-link text-uppercase">Tvshow</a> -->
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section" id="headerSection3">
+        <div class="container">
                 <nav class="nav justify-content-center justify-content-md-end">
                     <a href="#" class="nav-link social-link">
                         <i class="bi bi-instagram"></i>
@@ -209,5 +220,6 @@
         </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
