--- a/myproject.html
+++ b/myproject.html
@@ -60,7 +60,7 @@
                             </li>
                         </ul>
                     </div> -->
-                        <div class="drop-down-div d-lg-none">
+                        <!-- <div class="drop-down-div d-lg-none">
                             <div class="dropdown text-end text-sm-end mt-5">
                                 <button class="btn dropdown-btn dropdowntoggle btn-outline-danger"
                                 type="button" 
@@ -87,12 +87,24 @@
                                     <li>
                                         <a href="reading.html" class="dropdown-item">Reading</a>
                                     </li>
-                                    <!-- <li>
+                                    <li>
                                         <a href="#" class="dropdown-item">TvShows</a>
-                                    </li> -->
+                                    </li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
+                        <button class="hamburger">
+                            <div class="bar"></div>
+                        </button>
+                    </div>
+                    <nav class="mobile-nav">
+                        <a href="index.html">Home</a>
+                        <a href="about.html">About</a>
+                        <a href="myproject.html">Project</a>
+                        <a href="sports.html">Sports</a>
+                        <a href="gaming.html">Gaming</a>
+                        <a href="reading.html">Reading</a>
+                    </nav>
                     </div>
                 </div>
             </div>
@@ -101,7 +113,7 @@
             <div class="contanier mb-5">
                 <div class="row">
                     <div class="col-lg-4">
-                        <h1 class="heading">CjPage</h1>
+                        <a href="index.html" class="heading">CJpage</a>
                     </div>
                         <nav class="nav d-none d-lg-flex main-nav justify-content-lg-center" id="mainNav">
                             <a href="index.html" class="header-text header-link nav-link text-uppercase">Home</a>
@@ -150,7 +162,7 @@
                 <h2 class=" ab-text text-center mb-5">MyProjects</h2>
                 <div class="row">
                     <div class="col-md-6 mb-5">
-                        <img src="images/Screenshot (2).png" class="card-img img-fluid w-75" alt="an image of a web page">
+                        <img src="images/Screenshot (2).png" class="card-img img-fluid w-75" alt="an image of detroix web page">
                         <div class="card-body">
                         <h2 class="card-title">Detroix</h2>
                         <p class="card-text">This is my detroix page where I use bootstrap and css</p>
@@ -159,7 +171,7 @@
                 </div>
             </div>
         <div class="col-md-6 mb-5">
-                        <img src="images/Screenshot (3).png" class="card-img img-fluid w-75" alt="an image of a web page">
+                        <img src="images/Screenshot (3).png" class="card-img img-fluid w-75" alt="an image of bloom web page">
                         <div class="card-body">
                         <h2 class="card-title">Bloom</h2>
                         <p class="card-text">This is my bloom page where I use bootstrap and css</p>
@@ -168,7 +180,7 @@
             </div>
         </div>
             <div class="col-md-6 mb-5">
-                        <img src="images/Screenshot (4).png" class="card-img img-fluid w-75" alt="an image of a web page">
+                        <img src="images/Screenshot (4).png" class="card-img img-fluid w-75" alt="an image of fakezon web page">
                         <div class="card-body">
                         <h2 class="card-title">FakeZon</h2>
                         <p class="card-text">This is my FakeZon page where I use bootstrap and css</p>
@@ -177,7 +189,7 @@
                     </div>
         </div>
         <div class="col-md-6">
-                    <img src="images/Screenshot (6).png" class="card-img img-fluid w-75" alt="an image of a web page">
+                    <img src="images/Screenshot (6).png" class="card-img img-fluid w-75" alt="an image of Restaurant web page">
                     <div class="card-body">
                     <h2 class="card-title">Restaurant</h2>
                     <p class="card-text">This is my Restaurant page where I use bootstrap and css</p>
@@ -209,5 +221,6 @@
     </section>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="./main.js"></script>
 </body>
 </html>
